# combatlearn

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  docs_requirements.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yaml
combatlearn/: __init__.py  _mixed.py  _nested.py  _utils.py  combat.py  core.py  inspection.py  metrics.py  sklearn_api.py  visualization.py
combatlearn/transductive/: __init__.py  _transductive.py
demo/: combatlearn_demo.ipynb
docs/: Makefile  api.md  contributing.md  index.md  installation.md  quickstart.md  requirements.txt
docs/demo/: combatlearn_demo.ipynb
docs/examples/: basic-usage.md  grid-search.md
docs/source/: api.rst  conf.py  contributing.md  faq.md  index.md  methods.md
docs/source/demo/: combatlearn_demo.ipynb
docs/user-guide/: cross-validation.md  methods.md  metrics.md  overview.md  parameters.md  visualization.md
examples/: README.md  basic_usage.py  cross_validation.py  grid_search.py  visualization.py
src/combatlearn/: combat.py
tests/: test_combat.py  test_eb_degenerate.py  test_gam.py  test_inspection.py  test_longitudinal.py  test_metrics.py  test_nested.py  test_property.py  test_transductive.py  test_visualization.py  utils.py
