[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combatlearn"
version = "0.2.1"
description = "Batch-effect harmonization for machine learning frameworks."
authors = [{name="Ettore Rocchi", email="ettoreroc@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "scikit-learn>=1.2",
    "matplotlib>=3.4",
    "plotly>=5.0",
    "nbformat>=4.2",
    "umap-learn>=0.5",
    "pytest>=7"
]
license = {file="LICENSE"}
readme = {file="README.md", content-type="text/markdown"}
keywords = [
    "machine-learning",
    "harmonization",
    "combat",
    "preprocessing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["combatlearn*"]
