[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combatlearn"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Batch-effect harmonization for machine learning frameworks."
authors = [{name="Ettore Rocchi", email="ettoreroc@gmail.com"}]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = {file="README.md", content-type="text/markdown"}
keywords = [
    "machine-learning",
    "harmonization",
    "combat",
    "preprocessing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["combatlearn*"]

[tool.setuptools.dynamic]
version = {attr = "combatlearn.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.docs = {file = ["requirements-docs.txt"]}

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", ".github", "docs", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "umap",
    "plotly.*",
    "seaborn",
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true
